clang/test/BSC/Negative/SafeZone/spatial_check_user_mode/spatial_check_user_mode.cbs
// RUN: %clang_cc1 -verify -spatial-check=user %s

typedef struct {
  int a;
  int b;
} S1;

typedef struct {
  int *_Owned p;
  int *_Borrow q;
} S2;

// Test pointers point to _Owned pointer are not allowed to subscript in unsafe zone
void test1(int *_Owned *_Owned q4, int *_Owned *_Borrow q5) {
  q4[2][3] = 5; // expected-error {{_Owned pointer type ('int *_Owned *_Owned') do not support ArraySubscript operate}}
  q4[2] = nullptr; // expected-error {{_Owned pointer type ('int *_Owned *_Owned') do not support ArraySubscript operate}}
  q5[2] = nullptr; // expected-error {{_Owned pointer type ('int *_Owned *_Borrow') do not support ArraySubscript operate}}
  q5[2][1] = 3; // expected-error {{_Owned pointer type ('int *_Owned *_Borrow') do not support ArraySubscript operate}}
}

// Test pointers point to _Owned pointer are not allowed to subscript in safe zone
_Safe void test2(int *_Owned *_Owned q3) {
  q3[2][4] = 1; // expected-error {{_Owned pointer type ('int *_Owned *_Owned') do not support ArraySubscript operate}}
}

// Test pointers point to _Owned pointer are not allowed to subscript in nested safe/unsafe contexts
void test3(int *_Owned *_Owned q3, int *_Owned *_Owned q4, int *_Owned *_Borrow q5) {
  _Unsafe {
    _Safe {
      q3[2][4] = 1; // expected-error {{_Owned pointer type ('int *_Owned *_Owned') do not support ArraySubscript operate}}
      q4[2][3] = 5; // expected-error {{_Owned pointer type ('int *_Owned *_Owned') do not support ArraySubscript operate}}
      q4[2] = nullptr; // expected-error {{_Owned pointer type ('int *_Owned *_Owned') do not support ArraySubscript operate}}
    }
  }

  _Safe {
    q5[2] = nullptr; // expected-error {{_Owned pointer type ('int *_Owned *_Borrow') do not support ArraySubscript operate}}
    _Unsafe {
      q5[2][1] = 3; // expected-error {{_Owned pointer type ('int *_Owned *_Borrow') do not support ArraySubscript operate}}
    }
  }
}

_Safe void test4(S1 *_Owned *_Owned q4, S1 *_Owned *_Borrow q5) {
  q4[2] = nullptr; // expected-error {{_Owned pointer type ('S1 *_Owned *_Owned') do not support ArraySubscript operate}}
  q4[2][3] = (S1) {}; // expected-error {{_Owned pointer type ('S1 *_Owned *_Owned') do not support ArraySubscript operate}}
  q4[2][3].a = 6; // expected-error {{_Owned pointer type ('S1 *_Owned *_Owned') do not support ArraySubscript operate}}
}

// Test safe pointers in struct fields
_Safe void test5(S2 *_Owned p1) {
  p1[2] = (S2) {}; // expected-error {{_Owned pointer type ('S2 *_Owned') do not support ArraySubscript operate}}
  p1[2].p[2] = 3; // expected-error {{_Owned pointer type ('S2 *_Owned') do not support ArraySubscript operate}}
  p1[1].q[3] = 4; // expected-error {{_Owned pointer type ('S2 *_Owned') do not support ArraySubscript operate}}
}
